--- a/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="background-color: #383838;">
     <div class="coupleInfo-mainHeader">
-        <h3 style=" font-family: 'Raleway', sans-serif;">{{languageConfig.properties.get('home_cpl_header')}}</h3>
+        <h3 style="font-family: var(--ff-secondary);">{{languageConfig.properties.get('home_cpl_header')}}</h3>
         <span>{{languageConfig.properties.get('home_cpl_subheader')}}</span>
         <p style="font-size:2rem;color:gray">
           <i class="bi bi-rainbow"></i>
