--- a/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.css
@@ -19,7 +19,7 @@
 
 .overlay-div-sub-header {
     margin-top: 1.4rem;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
 }
 
 .overlay-div-sub-header-day {
