--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.css
@@ -32,7 +32,7 @@
   margin-top: 2rem;
   padding-top: 1rem;
   color: white;
-  font-family: 'Raleway', sans-serif;
+  font-family: var(--ff-secondary);
 }
 
 .overlay-div-sub-header-day {
