--- a/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.css
@@ -32,7 +32,7 @@
     margin-top: 2rem;
     padding-top: 1rem;
     color: white;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
 }
 
 .overlay-div-sub-header-day {
@@ -142,7 +142,7 @@
 }
 
 .parent-container h1 {
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--ff-main);
 }
 
 .card-container {
@@ -159,11 +159,11 @@
 }
 
 .card-container h1 {
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
 }
 
 .header-container p {
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
     color: rgb(155, 155, 155);
     margin-top: 20px;
     font-size: 1.2rem;
@@ -183,7 +183,7 @@
 }
 
 .flex-child-container span {
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
     color: rgb(155, 155, 155);
     font-size: 1.4rem;
 }
