--- a/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.css
@@ -19,7 +19,7 @@ background-color: rgba(255, 255, 255, 0.4);
 
 .overlay-div-sub-header{
     margin-top:2rem;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
 }
 
 .overlay-div-sub-header-day{
@@ -35,11 +35,11 @@ background-color: rgba(255, 255, 255, 0.4);
 }
 
 input{
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
 }
 
 label{
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
 }
 
 .qa-container{
@@ -48,7 +48,7 @@ label{
     text-align: center;
     border:1px solid rgb(223, 144, 41);
     border-radius: 8px;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--ff-secondary);
 }
 
 .sub-qa-container{
@@ -58,5 +58,5 @@ label{
     text-align: center;
     border:4px solid #f5d15a;
     border-radius: 8px;
-    font-family: 'Raleway', sans-serif;   
+    font-family: var(--ff-secondary);
 }
