--- a/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.html
@@ -11,8 +11,7 @@
                     <h1 class="overlay-div-header">Say you will be there</h1>
                 </div>
                 <div class="container overlay-div-sub-header">
-                    <h2>Please let us know if you can make it by
-                        July 10th at the latest, preesh!</h2>
+                    <h2>{{languageConfig.properties.get('rsvp_invite_header')}}</h2>
                 </div>
             </div>
         </div>
@@ -24,48 +23,48 @@
                     <div class="qa-container">
                         <label>
                             <input type="radio" formControlName="generalAttend" value="Yes" name="generalAttend" (change)="onRadioChange()">
-                            <strong style="color:#1c6b1c"> I will</strong> attend ceremony and/or party  <i class="bi bi-check-circle" style="font-size:1.4rem;padding-left:8px;color:#1c6b1c"></i>.
+                            <strong style="color:#1c6b1c"> {{languageConfig.properties.get('rsvp_pos_answer')}}</strong> {{languageConfig.properties.get('rsvp_main_option_a')}}  <i class="bi bi-check-circle" style="font-size:1.4rem;padding-left:8px;color:#1c6b1c"></i>.
                           </label>
                     </div>
                     <div class="qa-container" style="margin-top:8px;">
                         <label>
                             <input type="radio" formControlName="generalAttend" value="No" name="generalAttend" (change)="onRadioChange()">
-                            <strong style="color:#8f1616"> I will not</strong> attend both of them <i class="bi bi-slash-circle" style="font-size:1.4rem;padding-left:8px;color:#8f1616"></i>.
+                            <strong style="color:#8f1616"> {{languageConfig.properties.get('rsvp_neg_answer')}}</strong> {{languageConfig.properties.get('rsvp_main_option_b')}} <i class="bi bi-slash-circle" style="font-size:1.4rem;padding-left:8px;color:#8f1616"></i>.
                           </label>                       
                     </div>
                 </div>
                 <div class="sub-qa-container" style="margin-bottom:20px" [hidden]="noAttendance">
                     <div class="form-check">
-                        <label class="form-check-label" for="attendCeremony">Will you attend the wedding ceremony?</label>
+                        <label class="form-check-label" for="attendCeremony">{{languageConfig.properties.get('rsvp_pos_option_a')}}</label>
                         <input class="form-check-input" type="checkbox" id="attendCeremony" formControlName="attendCeremony" (change)="onCheckboxChange()">  
                     </div>
                       <div class="form-check">
-                        <label class="form-check-label" for="attendParty">Will you attend the party?</label>
+                        <label class="form-check-label" for="attendParty">{{languageConfig.properties.get('rsvp_pos_option_b')}}</label>
                         <input class="form-check-input" type="checkbox" id="attendParty" formControlName="attendParty" (change)="onCheckboxChange()">  
                     </div>
                 </div>
                 <div [hidden]="!submitterWillAttend && !noAttendance || noAnswer">
-                    <h4 style="font-family: 'Raleway', sans-serif;">Contact Details <i class="bi bi-person-bounding-box" style="padding-left:4px"></i></h4>
+                    <h4 style="font-family: 'Raleway', sans-serif;">{{languageConfig.properties.get('rsvp_contact_header')}} <i class="bi bi-person-bounding-box" style="padding-left:4px"></i></h4>
                     <div style="margin-bottom:20px">
                         <input id="submitterName" name="submitterName" formControlName="submitterName"
-                            placeholder="Enter your first name" class="form-control" (change)="onSubmitterChange()">
+                            placeholder="{{languageConfig.properties.get('rsvp_firstname')}}" class="form-control" (change)="onSubmitterChange()">
                     </div>
                     <div style="margin-bottom:20px">
                         <input id="submitterSurname" name="submitterSurname" formControlName="submitterSurname"
-                            placeholder="Enter your last name" class="form-control" (change)="onSubmitterChange()">
+                            placeholder="{{languageConfig.properties.get('rsvp_lastname')}}" class="form-control" (change)="onSubmitterChange()">
                     </div>
                     <div style="margin-bottom:20px">
                         <input id="phone" name="phone" formControlName="phone"
-                            placeholder="Enter your phone number" class="form-control">
+                            placeholder="{{languageConfig.properties.get('rsvp_phone')}}" class="form-control">
                     </div>
                     <div style="margin-bottom:20px">
                         <input id="email" name="email" formControlName="email"
-                            placeholder="Enter your email address" class="form-control" type="email">
+                            placeholder="{{languageConfig.properties.get('rsvp_email')}}" class="form-control" type="email">
                     </div>
                 </div>
                 <div [hidden]="!submitterWillAttend || noAttendance">
-                    <h4>Reservation Details <i class="bi bi-ui-radios" style="padding-left:4px"></i></h4>
-                    <label for="peopleCount">Number of people</label>
+                    <h4>{{languageConfig.properties.get('rsvp_subheader_people')}} <i class="bi bi-ui-radios" style="padding-left:4px"></i></h4>
+                    <label for="peopleCount">{{languageConfig.properties.get('rsvp_people_count')}}</label>
                     <div style="margin-bottom:20px">
                         <input id="peopleCount" name="peopleCount" formControlName="peopleCount"
                             type="number" min="1" max="20" class="form-control" (change)="onPeopleCountChange()">
@@ -78,7 +77,7 @@
                             </tr>
                             <tr *ngFor="let person of attendees; index as i">
                                 <td><i class="bi bi-person-fill-check"></i></td>
-                                <td><input id="attendRow{{i}}" placeholder="Enter the fullname of the attendee" class="form-control"  (change)="onAttendeeChange(i)"></td>                    
+                                <td><input id="attendRow{{i}}" placeholder="{{languageConfig.properties.get('rsvp_extra_attendee')}}" class="form-control"  (change)="onAttendeeChange(i)"></td>                    
                             </tr>
                         </table>
                     </div>
@@ -86,21 +85,21 @@
                 <div [hidden]="!submitterWillAttend && !noAttendance || noAnswer">
                     <div style="margin-bottom:20px">
                         <textarea id="comments" name="comments" formControlName="comments"
-                            placeholder="Enter any additional comments" class="form-control" rows="4"></textarea>
+                            placeholder="{{languageConfig.properties.get('rsvp_comments')}}" class="form-control" rows="4"></textarea>
                     </div>
                 </div>
             </div>
     
             <div class="form-inline" style="padding:20px 0px;text-align: center;">
                 <button class="btn btn-lg btn-success" type="submit" style="margin-right:5px;width:100%;max-width:800px"
-                    [disabled]="isLoading || !rsvpForm.valid"><i class="bi bi-envelope-open-heart" style="padding-right:8px"></i>Submit RSVP</button>
+                    [disabled]="isLoading || !rsvpForm.valid"><i class="bi bi-envelope-open-heart" style="padding-right:8px"></i>{{languageConfig.properties.get('rsvp_submit')}}</button>
             </div>
     
             <div class="form-inline" style="padding:40px 0px;" [hidden]="!isLoading">
                 <div class="spinner-border text-primary" role="status">
                 </div>
                 <div>
-                    <h4 style="padding-left:20px;color:rgb(23, 23, 23)">Submitting...</h4>
+                    <h4 style="padding-left:20px;color:rgb(23, 23, 23)">{{languageConfig.properties.get('rsvp_submitting')}}</h4>
                 </div>
             </div>
     
